--- a/apps/docs/src/theme.css
+++ b/apps/docs/src/theme.css
@@ -146,10 +146,10 @@
   [data-theme="dark"] {
     color-scheme: dark;
 
-    --background: color-mix(in oklab, oklch(12% 0.005 285.823) 96%, var(--accent) 4%);
+    --background: color-mix(in oklab, oklch(9% 0.004 285.823) 97%, var(--accent) 3%);
     --foreground: var(--snow);
 
-    --surface: color-mix(in oklab, oklch(0.2103 0.0059 285.89) 97%, var(--accent) 3%);
+    --surface: color-mix(in oklab, oklch(0.196 0.0055 285.89) 97%, var(--accent) 3%);
     --surface-foreground: var(--foreground);
     --surface-secondary: oklch(0.257 0.0037 286.14);
     --surface-tertiary: oklch(0.2721 0.0024 247.91);
@@ -159,7 +159,7 @@
     --overlay: oklch(0.2103 0.0059 285.89);
     --overlay-foreground: var(--foreground);
 
-    --muted: oklch(70.5% 0.015 286.067);
+    --muted: oklch(74% 0.014 286.067);
 
     --default: oklch(27.4% 0.006 286.033);
     --default-foreground: var(--snow);
